@@ -7,6 +7,7 @@ Issue #2718 Add setting NoOfSecondsToSleepAfterPublishBcContainerApp to be able 
 AL-Go issue https://github.com/microsoft/AL-Go/issues/228
 Issue #2745 Support for Windows 10 22H2
 Add parameter TreatTestFailuresAsWarnings to Run-AlPipeline
+Add parameter knownApps to Sort-AppFoldersByDependencies, to return all known apps in sorted folders
 
 4.0.5
 Issue #2697 Run-AlValidation does not fail validation, but validation fails in Partner Center when submitting the app for NextMajor
